--- a/css/style.css
+++ b/css/style.css
@@ -52,16 +52,6 @@ body {
 	-webkit-font-smoothing: antialiased;
 }
 
-.body-right-sidebar .main {
-	float: left;
-	margin-right: 2.5%;
-}
-
-.body-left-sidebar .main {
-	float: right;
-	margin-left: 2.5%;
-}
-
 .container,
 .container-inner {
 	position: relative;
@@ -80,14 +70,35 @@ body {
 	background: #fff;
 }
 
+.flex {
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+}
+
 .content {
-	width: 65.83%;
-	overflow: hidden;
+	-webkit-flex: 1 0 65.83%;
+	-ms-flex: 1 0 65.83%;
+	flex: 1 0 65.83%;
+	-ms-flex-order: 1;
+	-webkit-order: 1;
+	order: 1;
 }
 
 .sidebar {
-	float: left;
-	width: 31.66%;
+	-webkit-flex: 1 0 31.66%;
+	-ms-flex: 1 0 31.66%;
+	flex: 1 0 31.66%;
+	-ms-flex-order: 2;
+	-webkit-order: 2;
+	order: 2;
+	margin: 0 0 0 2.5%;
+}
+
+.sidebar--left {
+	-webkit-order: 0;
+	order: 0;
+	margin: 0 2.5% 0 0;
 }
 
 .clearfix {
@@ -359,68 +370,17 @@ select {
 	margin-bottom: 20px;
 }
 
-/* Columns */
-.row [class*="col-"]:first-child {
-	margin: 0;
-}
-
-[class*="col-"] {
-	float: left;
-	margin-left: 2.5%;
-	overflow: hidden;
-}
-
-.col-1-1 {
-	width: 100%;
-}
-
-.col-1-2 {
-	width: 48.75%;
-}
-
-.col-1-3 {
-	width: 31.66%;
-}
-
-.col-2-3 {
-	width: 65.83%;
-}
-
-.col-1-4 {
-	width: 23.12%;
-}
-
-.col-3-4 {
-	width: 74.37%;
-}
-
-.col-1-5 {
-	width: 18%;
-}
-
-.col-1-6 {
-	width: 14.58%;
-}
-
-.col-1-7 {
-	width: 12.14%;
-}
-
-.col-1-8 {
-	width: 10.31%;
-}
-
 /* Header */
 .header {
 	background: #fff;
 }
 
 .logo {
-	padding: 20px;
+	padding: 25px;
 }
 
 .logo__link {
-	margin: 5px 0;
+	display: inline-block;
 	text-transform: uppercase;
 }
 
@@ -727,6 +687,68 @@ select {
 	fill: #fff;
 }
 
+/* Table of Contents */
+.toc {
+	margin-bottom: 20px;
+	font-weight: 700;
+	color: #7a8288;
+	background: #fff;
+	border-color: #ebebeb;
+	border-style: solid;
+	border-top-width: 1px;
+	border-right-width: 1px;
+	border-bottom-width: 0;
+	border-left-width: 1px;
+}
+
+.toc__title {
+	padding: 5px 10px;
+	color: #fff;
+	text-transform: uppercase;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	-o-user-select: none;
+	user-select: none;
+	background: #2a2a2a;
+}
+
+.toc__menu ul {
+	margin: 0;
+	list-style: none;
+}
+
+.toc__menu ul ul ul a {
+	padding-left: 25px;
+}
+
+.toc__menu ul ul ul ul a {
+	padding-left: 45px;
+}
+
+.toc__menu ul ul ul ul ul a {
+	padding-left: 65px;
+}
+
+.toc__menu ul ul ul ul ul ul a {
+	padding-left: 85px;
+}
+
+.toc__menu li {
+	margin: 0;
+}
+
+.toc__menu a {
+	display: block;
+	padding: 5px 10px;
+	color: #e64946;
+	border-bottom: 1px solid #ebebeb;
+}
+
+.toc__menu a:hover {
+	text-decoration: underline;
+}
+
 /* Author Box */
 .authorbox {
 	padding: 25px 0;
@@ -807,6 +829,9 @@ select {
 
 /* Post Navigation */
 .post-nav {
+	-ms-flex-pack: justify;
+	-webkit-justify-content: space-between;
+	justify-content: space-between;
 	padding-top: 25px;
 	padding-bottom: 25px;
 	margin-bottom: 25px;
@@ -829,9 +854,21 @@ select {
 	font-size: .8125rem;
 }
 
+.post-nav__item--prev {
+	-webkit-flex-grow: 1;
+	-ms-flex-positive: 1;
+	flex-grow: 1;
+}
+
 .post-nav__item--next {
-	float: right;
+	-webkit-flex-grow: 1;
+	-ms-flex-positive: 1;
+	flex-grow: 1;
 	text-align: right;
+}
+
+.post-nav__link {
+	display: block;
 }
 
 /* Images / Video */
@@ -941,7 +978,7 @@ textarea {
 	padding-bottom: 5px;
 	font-size: 16px;
 	font-size: 1rem;
-	/* text-transform: uppercase; */
+	text-transform: uppercase;
 	border-bottom: 3px solid #e64946;
 }
 
@@ -1063,6 +1100,10 @@ textarea {
 }
 
 @media screen and (max-width: 767px) {
+	.wrapper {
+		display: block;
+	}
+
 	.content,
 	.sidebar,
 	.body .main {
@@ -1093,12 +1134,6 @@ textarea {
 		width: 88%;
 	}
 
-	[class*="col-"] {
-		float: none;
-		width: 100%;
-		margin: 0;
-	}
-
 	.meta-categories {
 		display: block;
 		margin-left: 0;
@@ -1112,6 +1147,10 @@ textarea {
 		display: inline-block;
 		float: none;
 		margin: 0 0 20px;
+	}
+
+	.post-nav {
+		display: block;
 	}
 
 	.post-nav__item {
